--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon",
+    "dev": "nodemon --trace-warnings",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "author": "",
@@ -16,6 +16,7 @@
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
+    "node-binance-api": "^0.12.5",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
