--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "discordbot",
+  "name": "typescript_nodejs_boilerplate",
   "version": "1.0.0",
   "description": "",
   "main": "index.ts",
@@ -10,13 +10,10 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "dotenv": "^8.2.0",
-    "puppeteer": "^8.0.0",
     "typescript": "^4.2.4"
   },
   "devDependencies": {
     "@types/node": "^14.14.37",
-    "node-binance-api": "^0.12.5",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1"
   }
